--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ main {
 .die-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  gap: 20px;
 }
 
 .die {
@@ -29,9 +29,14 @@ main {
   background-color: aqua;
   padding: 5px;
   height: 50px;
-  width: 45px;
-  border-radius: 5px;
-  box-shadow: 10px grey;
+  width: 50px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+
+.die-num {
+  font-size: 2rem;
 }
