--- a/src/style.css
+++ b/src/style.css
@@ -3,30 +3,37 @@
 }
 
 body {
+  display: flex;
   margin: 0;
   background-color: #0B2434;
   padding: 20px;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Karla', sans-serif;
 }
 
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
   background-color: #F5F5F5;
-  height: 500px;
+  height: 400px;
   max-width: 800px;
   border-radius: 5px;
+  padding: 25px;
 }
 
 .die-container {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .die {
   display: flex;
-  background-color: aqua;
+  background-color: lightblue;
   padding: 5px;
   height: 50px;
   width: 50px;
@@ -39,4 +46,20 @@ main {
 
 .die-num {
   font-size: 2rem;
+}
+
+.roll-dice {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035FF;
+  color: white;
+  font-size: 1.2rem;
+  font-family: 'Karla', sans-serif;
+  cursor: pointer;
+}
+
+.roll-dice:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
